--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,10 +22,11 @@ jobs:
     - name: Add conda to system path
       run: |
         echo $CONDA/bin >> $GITHUB_PATH
+      
 
     - name: Install dependencies
       run: |
-        conda env update --file environment.yml --name base
+        conda install -y python=3.10 flake8 pytest requests numpy
 
     - name: Pull latest changes from external repository
       run: |
