--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,8 +41,8 @@ jobs:
 
     - name: Set git identity
       run: |
-        git config --global user.name "github-actions[bot]"
-        git config --global user.email "github-actions[bot]@users.noreply.github.com"
+        git config --global user.name "AiChiFang"
+        git config --global user.email "2245984741@qq.com"
 
     - name: Commit and push changes
       env:
